--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -2,3 +2,5 @@ name: test5
 title: ' Test 5 Documentation '
 version: ~
 start_page: named-module:index.adoc
+nav:
+- modules/named-module/pages/nav.adoc
